c/soloud_c.h


typedef void * AudioCollider;

typedef void * AudioAttenuator;

typedef void * Filter;

typedef void * Speech;

typedef void * TedSid;

typedef void * Vic;

typedef void * Vizsn;

typedef void * Wav;

typedef void * WaveShaperFilter;

typedef void * File;


/*
 * Speech
 */
void Speech_destroy(Speech * aSpeech);

Speech * Speech_create();

int Speech_setText(Speech * aSpeech, const char * aText);

int Speech_setParams(Speech * aSpeech);

int Speech_setParamsEx(Speech * aSpeech, unsigned int aBaseFrequency /* = 1330 */, float aBaseSpeed /* = 10.0f */, float aBaseDeclination /* = 0.5f */, int aBaseWaveform /* = KW_TRIANGLE */);

void Speech_setVolume(Speech * aSpeech, float aVolume);

void Speech_setLooping(Speech * aSpeech, int aLoop);

void Speech_setAutoStop(Speech * aSpeech, int aAutoStop);

void Speech_set3dMinMaxDistance(Speech * aSpeech, float aMinDistance, float aMaxDistance);

void Speech_set3dAttenuation(Speech * aSpeech, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void Speech_set3dDopplerFactor(Speech * aSpeech, float aDopplerFactor);

void Speech_set3dListenerRelative(Speech * aSpeech, int aListenerRelative);

void Speech_set3dDistanceDelay(Speech * aSpeech, int aDistanceDelay);

void Speech_set3dCollider(Speech * aSpeech, AudioCollider * aCollider);

void Speech_set3dColliderEx(Speech * aSpeech, AudioCollider * aCollider, int aUserData /* = 0 */);

void Speech_set3dAttenuator(Speech * aSpeech, AudioAttenuator * aAttenuator);

void Speech_setInaudibleBehavior(Speech * aSpeech, int aMustTick, int aKill);

void Speech_setLoopPoint(Speech * aSpeech, double aLoopPoint);

double Speech_getLoopPoint(Speech * aSpeech);

void Speech_setFilter(Speech * aSpeech, unsigned int aFilterId, Filter * aFilter);

void Speech_stop(Speech * aSpeech);


/*
 * TedSid
 */
void TedSid_destroy(TedSid * aTedSid);

TedSid * TedSid_create();

int TedSid_load(TedSid * aTedSid, const char * aFilename);

int TedSid_loadMem(TedSid * aTedSid, const unsigned char * aMem, unsigned int aLength);

int TedSid_loadMemEx(TedSid * aTedSid, const unsigned char * aMem, unsigned int aLength, int aCopy /* = false */, int aTakeOwnership /* = true */);

int TedSid_loadFile(TedSid * aTedSid, File * aFile);

void TedSid_setVolume(TedSid * aTedSid, float aVolume);

void TedSid_setLooping(TedSid * aTedSid, int aLoop);

void TedSid_setAutoStop(TedSid * aTedSid, int aAutoStop);

void TedSid_set3dMinMaxDistance(TedSid * aTedSid, float aMinDistance, float aMaxDistance);

void TedSid_set3dAttenuation(TedSid * aTedSid, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void TedSid_set3dDopplerFactor(TedSid * aTedSid, float aDopplerFactor);

void TedSid_set3dListenerRelative(TedSid * aTedSid, int aListenerRelative);

void TedSid_set3dDistanceDelay(TedSid * aTedSid, int aDistanceDelay);

void TedSid_set3dCollider(TedSid * aTedSid, AudioCollider * aCollider);

void TedSid_set3dColliderEx(TedSid * aTedSid, AudioCollider * aCollider, int aUserData /* = 0 */);

void TedSid_set3dAttenuator(TedSid * aTedSid, AudioAttenuator * aAttenuator);

void TedSid_setInaudibleBehavior(TedSid * aTedSid, int aMustTick, int aKill);

void TedSid_setLoopPoint(TedSid * aTedSid, double aLoopPoint);

double TedSid_getLoopPoint(TedSid * aTedSid);

void TedSid_setFilter(TedSid * aTedSid, unsigned int aFilterId, Filter * aFilter);

void TedSid_stop(TedSid * aTedSid);


/*
 * Vic
 */
void Vic_destroy(Vic * aVic);

Vic * Vic_create();

void Vic_setModel(Vic * aVic, int model);

int Vic_getModel(Vic * aVic);

void Vic_setRegister(Vic * aVic, int reg, unsigned char value);

unsigned char Vic_getRegister(Vic * aVic, int reg);

void Vic_setVolume(Vic * aVic, float aVolume);

void Vic_setLooping(Vic * aVic, int aLoop);

void Vic_setAutoStop(Vic * aVic, int aAutoStop);

void Vic_set3dMinMaxDistance(Vic * aVic, float aMinDistance, float aMaxDistance);

void Vic_set3dAttenuation(Vic * aVic, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void Vic_set3dDopplerFactor(Vic * aVic, float aDopplerFactor);

void Vic_set3dListenerRelative(Vic * aVic, int aListenerRelative);

void Vic_set3dDistanceDelay(Vic * aVic, int aDistanceDelay);

void Vic_set3dCollider(Vic * aVic, AudioCollider * aCollider);

void Vic_set3dColliderEx(Vic * aVic, AudioCollider * aCollider, int aUserData /* = 0 */);

void Vic_set3dAttenuator(Vic * aVic, AudioAttenuator * aAttenuator);

void Vic_setInaudibleBehavior(Vic * aVic, int aMustTick, int aKill);

void Vic_setLoopPoint(Vic * aVic, double aLoopPoint);

double Vic_getLoopPoint(Vic * aVic);

void Vic_setFilter(Vic * aVic, unsigned int aFilterId, Filter * aFilter);

void Vic_stop(Vic * aVic);


/*
 * Vizsn
 */
void Vizsn_destroy(Vizsn * aVizsn);

Vizsn * Vizsn_create();

void Vizsn_setText(Vizsn * aVizsn, char * aText);

void Vizsn_setVolume(Vizsn * aVizsn, float aVolume);

void Vizsn_setLooping(Vizsn * aVizsn, int aLoop);

void Vizsn_setAutoStop(Vizsn * aVizsn, int aAutoStop);

void Vizsn_set3dMinMaxDistance(Vizsn * aVizsn, float aMinDistance, float aMaxDistance);

void Vizsn_set3dAttenuation(Vizsn * aVizsn, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void Vizsn_set3dDopplerFactor(Vizsn * aVizsn, float aDopplerFactor);

void Vizsn_set3dListenerRelative(Vizsn * aVizsn, int aListenerRelative);

void Vizsn_set3dDistanceDelay(Vizsn * aVizsn, int aDistanceDelay);

void Vizsn_set3dCollider(Vizsn * aVizsn, AudioCollider * aCollider);

void Vizsn_set3dColliderEx(Vizsn * aVizsn, AudioCollider * aCollider, int aUserData /* = 0 */);

void Vizsn_set3dAttenuator(Vizsn * aVizsn, AudioAttenuator * aAttenuator);

void Vizsn_setInaudibleBehavior(Vizsn * aVizsn, int aMustTick, int aKill);

void Vizsn_setLoopPoint(Vizsn * aVizsn, double aLoopPoint);

double Vizsn_getLoopPoint(Vizsn * aVizsn);

void Vizsn_setFilter(Vizsn * aVizsn, unsigned int aFilterId, Filter * aFilter);

void Vizsn_stop(Vizsn * aVizsn);


/*
 * Wav
 */
void Wav_destroy(Wav * aWav);

Wav * Wav_create();

int Wav_load(Wav * aWav, const char * aFilename);

int Wav_loadMem(Wav * aWav, const unsigned char * aMem, unsigned int aLength);

int Wav_loadMemEx(Wav * aWav, const unsigned char * aMem, unsigned int aLength, int aCopy /* = false */, int aTakeOwnership /* = true */);

int Wav_loadFile(Wav * aWav, File * aFile);

int Wav_loadRawWave8(Wav * aWav, unsigned char * aMem, unsigned int aLength);

int Wav_loadRawWave8Ex(Wav * aWav, unsigned char * aMem, unsigned int aLength, float aSamplerate /* = 44100.0f */, unsigned int aChannels /* = 1 */);

int Wav_loadRawWave16(Wav * aWav, short * aMem, unsigned int aLength);

int Wav_loadRawWave16Ex(Wav * aWav, short * aMem, unsigned int aLength, float aSamplerate /* = 44100.0f */, unsigned int aChannels /* = 1 */);

int Wav_loadRawWave(Wav * aWav, float * aMem, unsigned int aLength);

int Wav_loadRawWaveEx(Wav * aWav, float * aMem, unsigned int aLength, float aSamplerate /* = 44100.0f */, unsigned int aChannels /* = 1 */, int aCopy /* = false */, int aTakeOwnership /* = true */);

double Wav_getLength(Wav * aWav);

void Wav_setVolume(Wav * aWav, float aVolume);

void Wav_setLooping(Wav * aWav, int aLoop);

void Wav_setAutoStop(Wav * aWav, int aAutoStop);

void Wav_set3dMinMaxDistance(Wav * aWav, float aMinDistance, float aMaxDistance);

void Wav_set3dAttenuation(Wav * aWav, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void Wav_set3dDopplerFactor(Wav * aWav, float aDopplerFactor);

void Wav_set3dListenerRelative(Wav * aWav, int aListenerRelative);

void Wav_set3dDistanceDelay(Wav * aWav, int aDistanceDelay);

void Wav_set3dCollider(Wav * aWav, AudioCollider * aCollider);

void Wav_set3dColliderEx(Wav * aWav, AudioCollider * aCollider, int aUserData /* = 0 */);

void Wav_set3dAttenuator(Wav * aWav, AudioAttenuator * aAttenuator);

void Wav_setInaudibleBehavior(Wav * aWav, int aMustTick, int aKill);

void Wav_setLoopPoint(Wav * aWav, double aLoopPoint);

double Wav_getLoopPoint(Wav * aWav);

void Wav_setFilter(Wav * aWav, unsigned int aFilterId, Filter * aFilter);

void Wav_stop(Wav * aWav);


/*
 * WaveShaperFilter
 */
void WaveShaperFilter_destroy(WaveShaperFilter * aWaveShaperFilter);

int WaveShaperFilter_setParams(WaveShaperFilter * aWaveShaperFilter, float aAmount);

WaveShaperFilter * WaveShaperFilter_create();

int WaveShaperFilter_getParamCount(WaveShaperFilter * aWaveShaperFilter);

const char * WaveShaperFilter_getParamName(WaveShaperFilter * aWaveShaperFilter, unsigned int aParamIndex);

unsigned int WaveShaperFilter_getParamType(WaveShaperFilter * aWaveShaperFilter, unsigned int aParamIndex);

float WaveShaperFilter_getParamMax(WaveShaperFilter * aWaveShaperFilter, unsigned int aParamIndex);

float WaveShaperFilter_getParamMin(WaveShaperFilter * aWaveShaperFilter, unsigned int aParamIndex);