soloud.odin


	/*
				* Speech
				*/
	Speech_destroy :: proc(aSpeech: ^Speech) ---
	Speech_create :: proc() -> ^Speech ---
	Speech_setText :: proc(aSpeech: ^Speech, aText: cstring) -> Result ---
	// int Speech_setParams :: proc(Speech * aSpeech) ---
	// int Speech_setParamsEx :: proc(Speech * aSpeech, unsigned int aBaseFrequency /* = 1330 */, float aBaseSpeed /* = 10.0f */, float aBaseDeclination /* = 0.5f */, int aBaseWaveform /* = KW_TRIANGLE */) ---
	// Speech_setVolume :: proc(Speech * aSpeech, aVolume: f32) ---
	// Speech_setLooping :: proc(Speech * aSpeech, aLoop: b32) ---
	// Speech_setAutoStop :: proc(Speech * aSpeech, aAutoStop: b32) ---
	// Speech_set3dMinMaxDistance :: proc(Speech * aSpeech, aMinDistance: f32, aMaxDistance: f32) ---
	// Speech_set3dAttenuation :: proc(Speech * aSpeech, unsigned int aAttenuationModel, aAttenuationRolloffFactor: f32) ---
	// Speech_set3dDopplerFactor :: proc(Speech * aSpeech, aDopplerFactor: f32) ---
	// Speech_set3dListenerRelative :: proc(Speech * aSpeech, int aListenerRelative) ---
	// Speech_set3dDistanceDelay :: proc(Speech * aSpeech, int aDistanceDelay) ---
	// Speech_set3dCollider :: proc(Speech * aSpeech, aCollider: ^AudioCollider) ---
	// Speech_set3dColliderEx :: proc(Speech * aSpeech, aCollider: ^AudioCollider, int aUserData /* = 0 */) ---
	// Speech_set3dAttenuator :: proc(Speech * aSpeech, aAttenuator: ^AudioAttenuator) ---
	// Speech_setInaudibleBehavior :: proc(Speech * aSpeech, aMustTick: b32, aKill: b32) ---
	// Speech_setLoopPoint :: proc(Speech * aSpeech, double aLoopPoint) ---
	// double Speech_getLoopPoint :: proc(Speech * aSpeech) ---
	// Speech_setFilter :: proc(Speech * aSpeech, unsigned int aFilterId, aFilter: ^Filter) ---
	// Speech_stop :: proc(Speech * aSpeech) ---


	/*
 * TedSid
 */
	// TedSid_destroy :: proc(TedSid * aTedSid) ---
	// TedSid * TedSid_create :: proc() ---
	// int TedSid_load :: proc(TedSid * aTedSid, const char * aFilename) ---
	// int TedSid_loadMem :: proc(TedSid * aTedSid, const unsigned char * aMem, unsigned int aLength) ---
	// int TedSid_loadMemEx :: proc(TedSid * aTedSid, const unsigned char * aMem, unsigned int aLength, int aCopy /* = false */, int aTakeOwnership /* = true */) ---
	// int TedSid_loadFile :: proc(TedSid * aTedSid, File * aFile) ---
	// TedSid_setVolume :: proc(TedSid * aTedSid, aVolume: f32) ---
	// TedSid_setLooping :: proc(TedSid * aTedSid, aLoop: b32) ---
	// TedSid_setAutoStop :: proc(TedSid * aTedSid, aAutoStop: b32) ---
	// TedSid_set3dMinMaxDistance :: proc(TedSid * aTedSid, aMinDistance: f32, aMaxDistance: f32) ---
	// TedSid_set3dAttenuation :: proc(TedSid * aTedSid, unsigned int aAttenuationModel, aAttenuationRolloffFactor: f32) ---
	// TedSid_set3dDopplerFactor :: proc(TedSid * aTedSid, aDopplerFactor: f32) ---
	// TedSid_set3dListenerRelative :: proc(TedSid * aTedSid, int aListenerRelative) ---
	// TedSid_set3dDistanceDelay :: proc(TedSid * aTedSid, int aDistanceDelay) ---
	// TedSid_set3dCollider :: proc(TedSid * aTedSid, aCollider: ^AudioCollider) ---
	// TedSid_set3dColliderEx :: proc(TedSid * aTedSid, aCollider: ^AudioCollider, int aUserData /* = 0 */) ---
	// TedSid_set3dAttenuator :: proc(TedSid * aTedSid, aAttenuator: ^AudioAttenuator) ---
	// TedSid_setInaudibleBehavior :: proc(TedSid * aTedSid, aMustTick: b32, aKill: b32) ---
	// TedSid_setLoopPoint :: proc(TedSid * aTedSid, double aLoopPoint) ---
	// double TedSid_getLoopPoint :: proc(TedSid * aTedSid) ---
	// TedSid_setFilter :: proc(TedSid * aTedSid, unsigned int aFilterId, aFilter: ^Filter) ---
	// TedSid_stop :: proc(TedSid * aTedSid) ---

	// /*
	//  * Vic
	//  */
	// Vic_destroy :: proc(Vic * aVic) ---
	// Vic * Vic_create :: proc() ---
	// Vic_setModel :: proc(Vic * aVic, int model) ---
	// int Vic_getModel :: proc(Vic * aVic) ---
	// Vic_setRegister :: proc(Vic * aVic, int reg, unsigned char value) ---
	// unsigned char Vic_getRegister :: proc(Vic * aVic, int reg) ---
	// Vic_setVolume :: proc(Vic * aVic, aVolume: f32) ---
	// Vic_setLooping :: proc(Vic * aVic, aLoop: b32) ---
	// Vic_setAutoStop :: proc(Vic * aVic, aAutoStop: b32) ---
	// Vic_set3dMinMaxDistance :: proc(Vic * aVic, aMinDistance: f32, aMaxDistance: f32) ---
	// Vic_set3dAttenuation :: proc(Vic * aVic, unsigned int aAttenuationModel, aAttenuationRolloffFactor: f32) ---
	// Vic_set3dDopplerFactor :: proc(Vic * aVic, aDopplerFactor: f32) ---
	// Vic_set3dListenerRelative :: proc(Vic * aVic, int aListenerRelative) ---
	// Vic_set3dDistanceDelay :: proc(Vic * aVic, int aDistanceDelay) ---
	// Vic_set3dCollider :: proc(Vic * aVic, aCollider: ^AudioCollider) ---
	// Vic_set3dColliderEx :: proc(Vic * aVic, aCollider: ^AudioCollider, int aUserData /* = 0 */) ---
	// Vic_set3dAttenuator :: proc(Vic * aVic, aAttenuator: ^AudioAttenuator) ---
	// Vic_setInaudibleBehavior :: proc(Vic * aVic, aMustTick: b32, aKill: b32) ---
	// Vic_setLoopPoint :: proc(Vic * aVic, double aLoopPoint) ---
	// double Vic_getLoopPoint :: proc(Vic * aVic) ---
	// Vic_setFilter :: proc(Vic * aVic, unsigned int aFilterId, aFilter: ^Filter) ---
	// Vic_stop :: proc(Vic * aVic) ---

	// /*
	//  * Vizsn
	//  */
	// Vizsn_destroy :: proc(Vizsn * aVizsn) ---
	// Vizsn * Vizsn_create :: proc() ---
	// Vizsn_setText :: proc(Vizsn * aVizsn, char * aText) ---
	// Vizsn_setVolume :: proc(Vizsn * aVizsn, aVolume: f32) ---
	// Vizsn_setLooping :: proc(Vizsn * aVizsn, aLoop: b32) ---
	// Vizsn_setAutoStop :: proc(Vizsn * aVizsn, aAutoStop: b32) ---
	// Vizsn_set3dMinMaxDistance :: proc(Vizsn * aVizsn, aMinDistance: f32, aMaxDistance: f32) ---
	// Vizsn_set3dAttenuation :: proc(Vizsn * aVizsn, unsigned int aAttenuationModel, aAttenuationRolloffFactor: f32) ---
	// Vizsn_set3dDopplerFactor :: proc(Vizsn * aVizsn, aDopplerFactor: f32) ---
	// Vizsn_set3dListenerRelative :: proc(Vizsn * aVizsn, int aListenerRelative) ---
	// Vizsn_set3dDistanceDelay :: proc(Vizsn * aVizsn, int aDistanceDelay) ---
	// Vizsn_set3dCollider :: proc(Vizsn * aVizsn, aCollider: ^AudioCollider) ---
	// Vizsn_set3dColliderEx :: proc(Vizsn * aVizsn, aCollider: ^AudioCollider, int aUserData /* = 0 */) ---
	// Vizsn_set3dAttenuator :: proc(Vizsn * aVizsn, aAttenuator: ^AudioAttenuator) ---
	// Vizsn_setInaudibleBehavior :: proc(Vizsn * aVizsn, aMustTick: b32, aKill: b32) ---
	// Vizsn_setLoopPoint :: proc(Vizsn * aVizsn, double aLoopPoint) ---
	// double Vizsn_getLoopPoint :: proc(Vizsn * aVizsn) ---
	// Vizsn_setFilter :: proc(Vizsn * aVizsn, unsigned int aFilterId, aFilter: ^Filter) ---
	// Vizsn_stop :: proc(Vizsn * aVizsn) ---

	// /*
	//  * Wav
	//  */
	// Wav_destroy :: proc(Wav * aWav) ---
	// Wav * Wav_create :: proc() ---
	// int Wav_load :: proc(Wav * aWav, const char * aFilename) ---
	// int Wav_loadMem :: proc(Wav * aWav, const unsigned char * aMem, unsigned int aLength) ---
	// int Wav_loadMemEx :: proc(Wav * aWav, const unsigned char * aMem, unsigned int aLength, int aCopy /* = false */, int aTakeOwnership /* = true */) ---
	// int Wav_loadFile :: proc(Wav * aWav, File * aFile) ---
	// int Wav_loadRawWave8 :: proc(Wav * aWav, unsigned char * aMem, unsigned int aLength) ---
	// int Wav_loadRawWave8Ex :: proc(Wav * aWav, unsigned char * aMem, unsigned int aLength, aSamplerate: f32 /* = 44100.0f */, unsigned int aChannels /* = 1 */) ---
	// int Wav_loadRawWave16 :: proc(Wav * aWav, short * aMem, unsigned int aLength) ---
	// int Wav_loadRawWave16Ex :: proc(Wav * aWav, short * aMem, unsigned int aLength, aSamplerate: f32 /* = 44100.0f */, unsigned int aChannels /* = 1 */) ---
	// int Wav_loadRawWave :: proc(Wav * aWav, float * aMem, unsigned int aLength) ---
	// int Wav_loadRawWaveEx :: proc(Wav * aWav, float * aMem, unsigned int aLength, aSamplerate: f32 /* = 44100.0f */, unsigned int aChannels /* = 1 */, int aCopy /* = false */, int aTakeOwnership /* = true */) ---
	// double Wav_getLength :: proc(Wav * aWav) ---
	// Wav_setVolume :: proc(Wav * aWav, aVolume: f32) ---
	// Wav_setLooping :: proc(Wav * aWav, aLoop: b32) ---
	// Wav_setAutoStop :: proc(Wav * aWav, aAutoStop: b32) ---
	// Wav_set3dMinMaxDistance :: proc(Wav * aWav, aMinDistance: f32, aMaxDistance: f32) ---
	// Wav_set3dAttenuation :: proc(Wav * aWav, unsigned int aAttenuationModel, aAttenuationRolloffFactor: f32) ---
	// Wav_set3dDopplerFactor :: proc(Wav * aWav, aDopplerFactor: f32) ---
	// Wav_set3dListenerRelative :: proc(Wav * aWav, int aListenerRelative) ---
	// Wav_set3dDistanceDelay :: proc(Wav * aWav, int aDistanceDelay) ---
	// Wav_set3dCollider :: proc(Wav * aWav, aCollider: ^AudioCollider) ---
	// Wav_set3dColliderEx :: proc(Wav * aWav, aCollider: ^AudioCollider, int aUserData /* = 0 */) ---
	// Wav_set3dAttenuator :: proc(Wav * aWav, aAttenuator: ^AudioAttenuator) ---
	// Wav_setInaudibleBehavior :: proc(Wav * aWav, aMustTick: b32, aKill: b32) ---
	// Wav_setLoopPoint :: proc(Wav * aWav, double aLoopPoint) ---
	// double Wav_getLoopPoint :: proc(Wav * aWav) ---
	// Wav_setFilter :: proc(Wav * aWav, unsigned int aFilterId, aFilter: ^Filter) ---
	// Wav_stop :: proc(Wav * aWav) ---

	// /*
	//  * WaveShaperFilter
	//  */
	// WaveShaperFilter_destroy :: proc(WaveShaperFilter * aWaveShaperFilter) ---
	// int WaveShaperFilter_setParams :: proc(WaveShaperFilter * aWaveShaperFilter, float aAmount) ---
	// WaveShaperFilter * WaveShaperFilter_create :: proc() ---
	// int WaveShaperFilter_getParamCount :: proc(WaveShaperFilter * aWaveShaperFilter) ---
	// const char * WaveShaperFilter_getParamName :: proc(WaveShaperFilter * aWaveShaperFilter, unsigned int aParamIndex) ---
	// unsigned int WaveShaperFilter_getParamType :: proc(WaveShaperFilter * aWaveShaperFilter, unsigned int aParamIndex) ---
	// float WaveShaperFilter_getParamMax :: proc(WaveShaperFilter * aWaveShaperFilter, unsigned int aParamIndex) ---
	// float WaveShaperFilter_getParamMin :: proc(WaveShaperFilter * aWaveShaperFilter, unsigned int aParamIndex) ---
